gitinfo/ansible/commit/04a7ef416e50893278d2695e38ebd08bf92475b5.txt
commit 04a7ef416e50893278d2695e38ebd08bf92475b5
Author: Marius Gedminas <marius@gedmin.as>
Date:   Fri Oct 16 17:41:01 2015 +0300

    Python 3: print function in a shell oneliner in Makefile
    
    Fixes
    
        File "<string>", line 1
          import string,random; print 'ansible-testing-' + ''.join(random.choice(string.ascii_letters + string.digits) for _ in xrange(8));
                                                       ^
      SyntaxError: invalid syntax
    
    when running integration tests with
    
      . hacking/env-setup
      . .tox/py35/bin/activate
      make -C test/integration test_var_precedence

diff --git a/test/integration/Makefile b/test/integration/Makefile
index b044121f5e..a25e9a3edb 100644
--- a/test/integration/Makefile
+++ b/test/integration/Makefile
@@ -3,7 +3,7 @@ VARS_FILE ?= integration_config.yml
 
 # Create a semi-random string for use when testing cloud-based resources
 ifndef CLOUD_RESOURCE_PREFIX
-CLOUD_RESOURCE_PREFIX := $(shell python -c "import string,random; print 'ansible-testing-' + ''.join(random.choice(string.ascii_letters + string.digits) for _ in xrange(8));")
+CLOUD_RESOURCE_PREFIX := $(shell python -c "import string,random; print('ansible-testing-' + ''.join(random.choice(string.ascii_letters + string.digits) for _ in range(8)));")
 endif
 
 CREDENTIALS_FILE = credentials.yml
